--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --player-color: #445a4e;
-  --comp-color: #345874;
+  --primary-color: #445a4e;
+  --secondary-color: #345874;
   --off-white-color: #fafcfb;
   --win-color: #2b6129;
   --lose-color: #ad0900;
@@ -69,7 +69,7 @@ h1 {
 }
 
 .player-score {
-  background-color: var(--player-color);
+  background-color: var(--primary-color);
 }
 
 .vs {
@@ -77,7 +77,7 @@ h1 {
 }
 
 .comp-score {
-  background-color: var(--comp-color);
+  background-color: var(--secondary-color);
 }
 
 .selections {
@@ -104,13 +104,13 @@ h1 {
 }
 
 .player-selection i {
-  color: var(--player-color);
-  border: 5px solid var(--player-color);
+  color: var(--primary-color);
+  border: 5px solid var(--primary-color);
 }
 
 .comp-selection i {
-  color: var(--comp-color);
-  border: 5px solid var(--comp-color);
+  color: var(--secondary-color);
+  border: 5px solid var(--secondary-color);
 }
 
 .round-details {
@@ -122,7 +122,6 @@ h1 {
 }
 
 .round-details-content {
-  /* display: none; */
   animation: detailsReveal;
   animation-duration: var(--round-details-duration);
 }
@@ -131,7 +130,6 @@ h1 {
 .round-details h2 {
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--win-color)
 }
 
 .selection-icon {
@@ -147,8 +145,7 @@ h1 {
 
 .restart-btn {
   display: none;
-  display: inline-block;
-  border: 5px solid var(--comp-color);
+  border: 5px solid var(--secondary-color);
   padding: 1rem 2rem;
   font-size: 1.25rem;
   font-weight: 700;
@@ -159,7 +156,7 @@ h1 {
 }
 
 .restart-btn:hover {
-  background-color: var(--comp-color);
+  background-color: var(--secondary-color);
   color: var(--off-white-color);
   transform: translateY(-2px);
   transition: all ease .3s;
@@ -167,7 +164,7 @@ h1 {
 
 .restart-btn:focus {
   outline: none;
-  border: 4px solid var(--comp-color);
+  border: 4px solid var(--secondary-color);
 }
 
 .player-choice h2 {
@@ -182,7 +179,7 @@ h1 {
 
 .player-choice i {
   padding: 8px;
-  color: var(--player-color);
+  color: var(--primary-color);
   transition: all ease 0.3s;
   cursor: pointer;
 }
@@ -197,17 +194,27 @@ i {
 
 .choice-icon:focus:focus {
   outline: none;
-  border: 4px solid var(--player-color);
+  border: 4px solid var(--primary-color);
   border-radius: 10px
 }
 
 .footer {
   display: flex;
   width: 100vw;
+  height: 40px;
+  background: var(--primary-color);
   justify-content: center;
   align-items: center;
-  height: 40px;
-  background: var(--player-color);
+  font-size: 1.25rem;
+  color: var(--off-white-color);
+}
+
+h2.win {
+  color: var(--win-color);
+}
+
+h2.lose {
+  color: var(--lose-color);
 }
 
 @keyframes detailsReveal {
@@ -306,29 +313,6 @@ i {
 }
 
 @media screen and (max-width: 600px) {
-  .selections {
-    margin: 32px 0;
-  }
-
-
-  .round-details {
-    font-size: 0.75;
-  }
-
-  .selection-icon {
-    font-size: 72px;
-  }
-
-  .player-choice {
-    gap: 60px;
-  }
-
-  .choice-icon {
-    font-size: 80px;
-  }
-}
-
-@media screen and (max-width: 480px) {
 
   h1 {
     font-size: 1.5rem;
@@ -364,8 +348,13 @@ i {
     margin: 16px 0;
   }
 
+  .selection-icon {
+    font-size: 72px;
+  }
+
   .round-details {
     padding: 8px;
+    font-size: 0.75;
   }
 
   .player-choice {
