--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 body {
   display: flex;
-  min-height: 100%;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -52,7 +52,6 @@ h1 {
   align-items: center;
   justify-content: space-between;
   gap: 40px
-    /* border: 2px solid red; */
 }
 
 .player-score,
@@ -374,7 +373,11 @@ h2.lose {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
+  i {
+    filter: drop-shadow(2px 3px 2px rgba(56, 56, 56, 0.2));
+  }
+
   .sub-heading {
     display: none;
   }
@@ -383,11 +386,17 @@ h2.lose {
     font-size: 1.25rem;
   }
 
+  .player-score,
+  .comp-score {
+    padding: 4px 0;
+  }
+
   .selection-icon {
-    font-size: 60px;
+    font-size: 52px;
   }
 
   .round-details {
+    padding: 12px;
     font-size: 0.75rem;
   }
 
@@ -395,8 +404,13 @@ h2.lose {
     font-size: 1rem;
   }
 
+  .player-selection i,
+  .comp-selection i {
+    border-width: 4px;
+  }
+
   .restart-btn {
-    padding: 8px 16px;
+    padding: 6px 12px;
     font-size: 0.75rem;
   }
 
@@ -405,10 +419,10 @@ h2.lose {
   }
 
   .choices-container {
-    gap: 16px;
+    gap: 24px;
   }
 
   .choice-icon {
-    font-size: 48px;
+    font-size: 40px;
   }
 }
